--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2401,41 +2401,50 @@ a {
     left: -1rem;
   }
 }
-.cid-sZYrvAouo7 {
-  padding-top: 10rem;
-  padding-bottom: 10rem;
+.cid-trdS8BVQM3 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
   background-color: #000000;
 }
-.cid-sZYrvAouo7 .image-wrapper {
-  display: flex;
-  align-items: center;
+.cid-trdS8BVQM3 .mbr-fallback-image.disabled {
+  display: none;
 }
-.cid-sZYrvAouo7 .card-wrapper {
-  margin-bottom: 2rem;
-  display: flex;
+.cid-trdS8BVQM3 .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-trdS8BVQM3 .card-wrapper {
+  background: #ffffff;
   border-radius: 4px;
-  background: #fafafa;
 }
-@media (max-width: 991px) {
-  .cid-sZYrvAouo7 .card-wrapper {
-    padding: 1rem 2rem;
+@media (max-width: 767px) {
+  .cid-trdS8BVQM3 .card-wrapper {
+    padding: 1rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .cid-trdS8BVQM3 .card-wrapper {
+    padding: 2rem;
   }
 }
 @media (min-width: 992px) {
-  .cid-sZYrvAouo7 .card-wrapper {
-    padding: 2rem 4rem;
+  .cid-trdS8BVQM3 .card-wrapper {
+    padding: 4rem;
   }
 }
-.cid-sZYrvAouo7 .mbr-iconfont {
-  font-size: 2rem;
-  padding-right: 1.5rem;
-  color: #004669;
-}
-.cid-sZYrvAouo7 .mbr-section-title {
+.cid-trdS8BVQM3 .mbr-text,
+.cid-trdS8BVQM3 .mbr-section-btn {
   color: #ffffff;
 }
-.cid-sZYrvAouo7 .mbr-section-subtitle {
-  color: #ffffff;
+.cid-trdS8BVQM3 .card-title,
+.cid-trdS8BVQM3 .card-box {
+  text-align: left;
+  color: #000000;
 }
 .cid-sZYKqFz1Zr {
   padding-top: 2rem;
