create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1890,30 +1890,6 @@ a {
 .cid-t8EMqaV4xK .card-title {
   color: #004669;
 }
-.cid-sZYo3B5vXj {
-  padding-top: 7rem;
-  padding-bottom: 7rem;
-  background-color: #000000;
-}
-.cid-sZYo3B5vXj .mbr-overlay {
-  background-color: #ffffff;
-  opacity: 0.4;
-}
-.cid-sZYo3B5vXj form .mbr-section-btn {
-  text-align: center;
-  width: 100%;
-}
-.cid-sZYo3B5vXj form .mbr-section-btn .btn {
-  display: inline-flex;
-}
-@media (max-width: 991px) {
-  .cid-sZYo3B5vXj form .mbr-section-btn .btn {
-    width: 100%;
-  }
-}
-.cid-sZYo3B5vXj .mbr-section-title {
-  color: #ffffff;
-}
 .cid-t8EMpA3vPO {
   padding-top: 75px;
   padding-bottom: 75px;
@@ -2401,50 +2377,17 @@ a {
     left: -1rem;
   }
 }
-.cid-trdS8BVQM3 {
+.cid-tre4EfbSCh {
   padding-top: 5rem;
   padding-bottom: 5rem;
   background-color: #000000;
 }
-.cid-trdS8BVQM3 .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-trdS8BVQM3 .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-trdS8BVQM3 .card-wrapper {
-  background: #ffffff;
-  border-radius: 4px;
-}
-@media (max-width: 767px) {
-  .cid-trdS8BVQM3 .card-wrapper {
-    padding: 1rem;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .cid-trdS8BVQM3 .card-wrapper {
-    padding: 2rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-trdS8BVQM3 .card-wrapper {
-    padding: 4rem;
-  }
-}
-.cid-trdS8BVQM3 .mbr-text,
-.cid-trdS8BVQM3 .mbr-section-btn {
+.cid-tre4EfbSCh .mbr-text {
+  text-align: left;
   color: #ffffff;
 }
-.cid-trdS8BVQM3 .card-title,
-.cid-trdS8BVQM3 .card-box {
-  text-align: left;
-  color: #000000;
+.cid-tre4EfbSCh .mbr-section-subtitle {
+  color: #004669;
 }
 .cid-sZYKqFz1Zr {
   padding-top: 2rem;
@@ -5636,17 +5579,35 @@ a {
 .cid-sZYKqFz1Zr .media-container-row .row-copirayt p {
   width: 100%;
 }
-.cid-t8zZZMzDqm {
+.cid-trdYGpo8GP {
   padding-top: 5rem;
   padding-bottom: 5rem;
   background-color: #000000;
 }
-.cid-t8zZZMzDqm .mbr-text {
+.cid-trdYGpo8GP .mbr-text {
   text-align: left;
   color: #ffffff;
 }
-.cid-t8zZZMzDqm .mbr-section-subtitle {
+.cid-trdYGpo8GP .mbr-section-subtitle {
   color: #004669;
+}
+.cid-trdYGpo8GP H1 {
+  color: #ffffff;
+}
+.cid-trdYGpo8GP H2 {
+  color: #bbbbbb;
+}
+.cid-trdYGpo8GP P {
+  color: #ffffff;
+}
+.cid-trdYGpo8GP H3 {
+  color: #bbbbbb;
+}
+.cid-trdYGpo8GP li {
+  color: #ffffff;
+}
+.cid-trdYGpo8GP a {
+  color: #3df58d;
 }
 .cid-sZXMY19iew {
   z-index: 1000;
